--- a/src/main/java/org/group9/gui/Result.fxml
+++ b/src/main/java/org/group9/gui/Result.fxml
@@ -3,81 +3,60 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="543.0" prefWidth="724.0" style="-fx-background-color: #211951;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.ResultController">
+<AnchorPane prefHeight="543.0" prefWidth="724.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.oop.Result">
     <children>
-        <Text fill="#f0f3ff" layoutX="34.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" wrappingWidth="105.46630859375">
+        <Text fill="#0231ee" layoutX="34.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" wrappingWidth="105.46630859375">
             <font>
                 <Font name="Arial Bold Italic" size="48.0" />
             </font>
         </Text>
-        <Text fill="#f0f3ff" layoutX="34.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search by Keyword">
+        <Text fill="#0a3af8" layoutX="34.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search by Keyword">
             <font>
                 <Font name="System Italic" size="30.0" />
             </font>
         </Text>
-        <TextField layoutX="34.0" layoutY="113.0" prefHeight="26.0" prefWidth="437.0" />
-        <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #836FFF;" text="Search" />
+        <TextField layoutX="34.0" layoutY="113.0" prefHeight="29.0" prefWidth="441.0" />
+        <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Search" />
         <ComboBox layoutX="540.0" layoutY="155.0" prefWidth="150.0" promptText="Sort by" />
-        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-        <Label text="Label" />
-        <AnchorPane layoutX="87.0" layoutY="200.0" prefHeight="146.0" prefWidth="541.0">
+
+        <AnchorPane blendMode="SRC_ATOP" cache="true" cacheHint="QUALITY" depthTest="DISABLE" layoutX="87.0" layoutY="198.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-radius: 20; -fx-background-color: #AFEEEE; -fx-border-radius: 15;">
             <children>
-                <AnchorPane layoutY="7.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-color: #15F5BA;">
-                    <children>
-                        <Label layoutX="16.0" layoutY="8.0" prefHeight="26.0" prefWidth="330.0" text="Title :">
-                            <font>
-                                <Font name="Arial Bold" size="30.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="16.0" layoutY="66.0" prefHeight="17.0" prefWidth="361.0" text="Date : ">
-                            <font>
-                                <Font name="System Bold" size="13.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="90.0" text="Hashtags: ">
-                            <font>
-                                <Font name="System Bold" size="19.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="16.0" layoutY="40.0" prefHeight="26.0" prefWidth="464.0" text="Author : ">
-                            <font>
-                                <Font name="Arial Bold" size="19.0" />
-                            </font>
-                        </Label>
-                    </children>
-                </AnchorPane>
-                <AnchorPane layoutY="139.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-color: #15F5BA;">
-                    <children>
-                        <Label layoutX="16.0" layoutY="8.0" prefHeight="26.0" prefWidth="330.0" text="Title :">
-                            <font>
-                                <Font name="Arial Bold" size="30.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="16.0" layoutY="66.0" prefHeight="17.0" prefWidth="361.0" text="Date : ">
-                            <font>
-                                <Font name="System Bold" size="13.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="14.0" layoutY="90.0" text="Hashtags: ">
-                            <font>
-                                <Font name="System Bold" size="19.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="16.0" layoutY="40.0" prefHeight="26.0" prefWidth="464.0" text="Author : ">
-                            <font>
-                                <Font name="Arial Bold" size="19.0" />
-                            </font>
-                        </Label>
-                    </children>
-                </AnchorPane>
+                <Label layoutX="14.0" layoutY="10.0" style="-fx-text-fill: black; -fx-font-size: 25;" text="Title:  " />
+                <Label layoutX="20.0" layoutY="72.0" style="-fx-text-fill: black;" text="Date: " />
+                <Label layoutX="322.0" layoutY="72.0" style="-fx-text-fill: black;" text="Author: ">
+                    <font>
+                        <Font name="System Italic" size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="25.0" layoutY="49.0" style="-fx-text-fill: black;" text="Url: " />
+                <Label layoutX="19.0" layoutY="100.0" style="-fx-text-fill: black;" text="Detail content : ">
+                    <font>
+                        <Font name="System Italic" size="13.0" />
+                    </font>
+                </Label>
             </children>
         </AnchorPane>
-        <ScrollBar layoutX="674.0" layoutY="200.0" orientation="VERTICAL" prefHeight="316.0" prefWidth="16.0" />
+        <AnchorPane blendMode="SRC_ATOP" cache="true" cacheHint="QUALITY" depthTest="DISABLE" layoutX="87.0" layoutY="364.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-radius: 20; -fx-background-color: #AFEEEE; -fx-border-radius: 15;">
+            <children>
+                <Label layoutX="14.0" layoutY="10.0" style="-fx-text-fill: black; -fx-font-size: 25;" text="Title:  " />
+                <Label layoutX="20.0" layoutY="72.0" style="-fx-text-fill: black;" text="Date: " />
+                <Label layoutX="322.0" layoutY="72.0" style="-fx-text-fill: black;" text="Author: ">
+                    <font>
+                        <Font name="System Italic" size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="25.0" layoutY="49.0" style="-fx-text-fill: black;" text="Url: " />
+                <Label layoutX="19.0" layoutY="100.0" style="-fx-text-fill: black;" text="Detail content : ">
+                    <font>
+                        <Font name="System Italic" size="13.0" />
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
     </children>
 </AnchorPane>
