--- a/src/main/java/org/group9/gui/helloview.fxml
+++ b/src/main/java/org/group9/gui/helloview.fxml
@@ -1,34 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: #211951;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Button layoutX="338.0" layoutY="541.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #836FFF;" text="Member">
-            <font>
-                <Font size="20.0" />
-            </font></Button>
-        <Button layoutX="512.0" layoutY="541.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #836FFF;" text="View Data">
-            <font>
-                <Font size="20.0" />
-            </font></Button>
-        <Button layoutX="682.0" layoutY="541.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #836FFF;" text="Exit">
-            <font>
-                <Font size="20.0" />
-            </font></Button>
-        <Text fill="#00ff95" layoutX="338.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GROUP 2 ">
+        <!-- Top AnchorPane for the toolbar -->
+        <AnchorPane prefHeight="92.0" prefWidth="868.0" style="-fx-background-color: #FFFFFF;">
+            <children>
+                <!-- Logo ImageView -->
+                <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../image/hust.jpg" />
+                    </image>
+                </ImageView>
+                <HBox layoutX="100.0" layoutY="20.0" spacing="10.0">
+                    <children>
+                        <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Member" />
+                        <Button mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="View Data" />
+                    </children>
+                </HBox>
+                <Button layoutX="670.0" layoutY="20.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #FF0000; -fx-text-fill: yellow; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Exit" />
+            </children>
+        </AnchorPane>
+        <Text fill="#1549ed" layoutX="367.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GROUP 2">
             <font>
                 <Font name="Times New Roman Bold" size="36.0" />
             </font>
         </Text>
-        <Text fill="#00f59f" layoutX="176.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blockchain Aggregator">
+        <Text fill="#1549ed" layoutX="166.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blockchain Aggregator" wrappingWidth="558.69189453125">
             <font>
-                <Font name="Times New Roman Bold" size="51.0" />
+                <Font name="Times New Roman Bold" size="55.0" />
             </font>
         </Text>
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
     </children>
 </AnchorPane>
+
