--- a/src/main/java/org/group9/gui/helloview.fxml
+++ b/src/main/java/org/group9/gui/helloview.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.MainController">
     <children>
         <!-- Top AnchorPane for the toolbar -->
         <AnchorPane prefHeight="92.0" prefWidth="868.0" style="-fx-background-color: #FFFFFF;">
@@ -16,7 +16,7 @@
                 <!-- Logo ImageView -->
                 <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../image/hust.jpg" />
+                        <Image url="@../../../resource/hust.jpg" />
                     </image>
                 </ImageView>
                 <HBox layoutX="100.0" layoutY="20.0" spacing="10.0">
@@ -40,4 +40,3 @@
         </Text>
     </children>
 </AnchorPane>
-
