--- a/src/main/resources/Member.fxml
+++ b/src/main/resources/Member.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="667.0" prefWidth="925.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.MemberController">
+<AnchorPane prefHeight="667.0" prefWidth="925.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.MemberController">
     <children>
         <!-- Circles -->
         <Circle fill="#0059ff" layoutX="811.0" layoutY="114.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
@@ -63,5 +63,6 @@
                 <Font name="Times New Roman Bold" size="30.0" />
             </font>
         </Label>
+        <Button layoutX="891.0" layoutY="621.0" mnemonicParsing="false" onAction="#handleBackButtonAction" style="-fx-background-color: #FF0000; -fx-text-fill: white; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Back" />
     </children>
 </AnchorPane>
