--- a/src/main/resources/Result.fxml
+++ b/src/main/resources/Result.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -23,7 +22,6 @@
         <TextField layoutX="34.0" layoutY="113.0" prefHeight="29.0" prefWidth="441.0" fx:id="searchField"/>
         <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Search" onAction="#handleSearchButtonAction"/>
         <ComboBox layoutX="540.0" layoutY="155.0" prefWidth="150.0" promptText="Sort by" fx:id="sortComboBox"/>
-
         <AnchorPane blendMode="SRC_ATOP" cache="true" cacheHint="QUALITY" depthTest="DISABLE" layoutX="87.0" layoutY="198.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-radius: 20; -fx-background-color: #AFEEEE; -fx-border-radius: 15;">
             <children>
                 <Label layoutX="14.0" layoutY="10.0" style="-fx-text-fill: black; -fx-font-size: 25;" text="Title: " fx:id="titleLabel"/>
@@ -41,6 +39,8 @@
                 </Label>
             </children>
         </AnchorPane>
-        <Button layoutX="34.0" layoutY="470.0" mnemonicParsing="false" style="-fx-background-color: #FF0000; -fx-text-fill: white; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Back" onAction="#handleBackButtonAction"/>
+        <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Search" onAction="#handleSearchButtonAction"/>
+
+        <Button layoutX="534.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleBackButtonAction" style="-fx-background-color: #FF0000; -fx-text-fill: white; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Back" />
     </children>
 </AnchorPane>
