--- a/src/main/resources/helloview.fxml
+++ b/src/main/resources/helloview.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="868.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.MainController">
     <children>
         <!-- Top AnchorPane for the toolbar -->
         <AnchorPane prefHeight="92.0" prefWidth="868.0" style="-fx-background-color: #FFFFFF;">
@@ -21,11 +18,11 @@
                 </ImageView>
                 <HBox layoutX="100.0" layoutY="20.0" spacing="10.0">
                     <children>
-                        <Button fx:id="runButton" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Run" />
-                        <Button fx:id="memberButton" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Member" />
+                        <Button fx:id="runButton" mnemonicParsing="false" onAction="#handleRunButtonAction" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Run" />
+                        <Button fx:id="memberButton" mnemonicParsing="false" onAction="#handleMemberButtonAction" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Member" />
                     </children>
                 </HBox>
-                <Button layoutX="670.0" layoutY="20.0" mnemonicParsing="false" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #FF0000; -fx-text-fill: yellow; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Exit" />
+                <Button fx:id="exitButton" layoutX="670.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleExitButtonAction" prefHeight="59.0" prefWidth="151.0" style="-fx-background-color: #FF0000; -fx-text-fill: yellow; -fx-font-size: 20px; -fx-background-radius: 10; -fx-border-radius: 10;" text="Exit" />
             </children>
         </AnchorPane>
         <Text fill="#1549ed" layoutX="367.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GROUP 2">
@@ -33,9 +30,9 @@
                 <Font name="Times New Roman Bold" size="36.0" />
             </font>
         </Text>
-        <Text fill="#1549ed" layoutX="166.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blockchain Aggregator" wrappingWidth="558.69189453125">
+        <Text fill="#1549ed" layoutX="166.0" layoutY="373.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Blockchain Aggregator" textAlignment="CENTER" wrappingWidth="558.69189453125">
             <font>
-                <Font name="Times New Roman Bold" size="55.0" />
+                <Font name="System Bold" size="36.0" />
             </font>
         </Text>
     </children>
