--- a/src/main/resources/Result.fxml
+++ b/src/main/resources/Result.fxml
@@ -1,46 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="543.0" prefWidth="724.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.ResultController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.ScrollPane?>
+
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, white, #ADD8E6);" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group9.gui.ResultController">
     <children>
-        <Text fill="#0231ee" layoutX="34.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" wrappingWidth="105.46630859375">
+        <Text fill="#0231ee" layoutX="40.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" wrappingWidth="145.46630859375">
             <font>
-                <Font name="Arial Bold Italic" size="48.0" />
+                <Font name="Arial Bold Italic" size="58.0" />
             </font>
         </Text>
-        <Text fill="#0a3af8" layoutX="34.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search by Keyword">
+        <Text fill="#0a3af8" layoutX="40.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search by Keyword">
             <font>
-                <Font name="System Italic" size="30.0" />
+                <Font name="System Italic" size="34.0" />
             </font>
         </Text>
-        <TextField layoutX="34.0" layoutY="113.0" prefHeight="29.0" prefWidth="441.0" fx:id="searchField"/>
-        <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Search" onAction="#handleSearchButtonAction"/>
-        <ComboBox layoutX="540.0" layoutY="155.0" prefWidth="150.0" promptText="Sort by" fx:id="sortComboBox"/>
-        <AnchorPane blendMode="SRC_ATOP" cache="true" cacheHint="QUALITY" depthTest="DISABLE" layoutX="87.0" layoutY="198.0" prefHeight="132.0" prefWidth="529.0" style="-fx-background-radius: 20; -fx-background-color: #AFEEEE; -fx-border-radius: 15;">
-            <children>
-                <Label layoutX="14.0" layoutY="10.0" style="-fx-text-fill: black; -fx-font-size: 25;" text="Title: " fx:id="titleLabel"/>
-                <Label layoutX="20.0" layoutY="72.0" style="-fx-text-fill: black;" text="Date: " fx:id="dateLabel"/>
-                <Label layoutX="322.0" layoutY="72.0" style="-fx-text-fill: black;" text="Author: " fx:id="authorLabel">
-                    <font>
-                        <Font name="System Italic" size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="25.0" layoutY="49.0" style="-fx-text-fill: black;" text="Url: " fx:id="urlLabel"/>
-                <Label layoutX="19.0" layoutY="100.0" style="-fx-text-fill: black;" text="Detail content: " fx:id="detailContentLabel">
-                    <font>
-                        <Font name="System Italic" size="13.0" />
-                    </font>
-                </Label>
-            </children>
-        </AnchorPane>
-        <Button layoutX="484.0" layoutY="113.0" mnemonicParsing="false" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Search" onAction="#handleSearchButtonAction"/>
+        <TextField fx:id="searchField" layoutX="40.0" layoutY="138.0" prefHeight="36.0" prefWidth="580.0" style="-fx-background-color: white; -fx-border-color: #5AB2FF; -fx-border-radius: 8;" />
+        <Button layoutX="640.0" layoutY="138.0" mnemonicParsing="false" onAction="#handleSearchButtonAction" prefHeight="36.0" prefWidth="120.0" style="-fx-background-color: #5AB2FF; -fx-text-fill: black; -fx-font-size: 15; -fx-border-radius: 8;" text="Search" />
+        <ComboBox fx:id="sortComboBox" layoutX="40.0" layoutY="190.0" prefHeight="26.0" prefWidth="150.0" promptText="Sort by" />
 
-        <Button layoutX="534.0" layoutY="354.0" mnemonicParsing="false" onAction="#handleBackButtonAction" style="-fx-background-color: #FF0000; -fx-text-fill: white; -fx-font-size: 15; -fx-border-radius: 15; -fx-background-radius: 10;" text="Back" />
+        <!-- ScrollPane for results VBox -->
+        <ScrollPane layoutX="40.0" layoutY="240.0" prefHeight="320.0" prefWidth="720.0" hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED" style="-fx-background-color: #E0FFFF; -fx-border-color: #5AB2FF; -fx-border-radius: 8;">
+            <VBox fx:id="resultsVBox" spacing="10.0" style="-fx-padding: 10px;"/>
+        </ScrollPane>
+
+        <Button layoutX="640.0" layoutY="580.0" mnemonicParsing="false" onAction="#handleBackButtonAction" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: #FF0000; -fx-text-fill: white; -fx-font-size: 15; -fx-border-radius: 8;" text="Back" />
     </children>
 </AnchorPane>
